<resources>
    <string name="app_name">BoxStore</string>
    <string name="camera_and_external_storage">camera_and_external_storage</string>

    <string name="title_notifications">알림</string>
    <string name="title_home">홈</string>
    <string name="title_mypage">마이페이지</string>
    <string name="title_sell">판매하기</string>
    <string name="title_category">카테고리</string>

    <string name="facebook_app_id">1658637104187874</string>
    <string name="fb_login_protocol_scheme">fb1658637104187874</string>
    <string name="loading">로딩 중입니다.</string>

    <string-array name="line1_stations">
        <item>서울역</item>
        <item>종로3가</item>
        <item>시청</item>
    </string-array>

    <string-array name="line2_stations">
        <item>강남</item>
        <item>홍대입구</item>
    </string-array>

    <string-array name="line3_stations">
        <item>교대</item>
        <item>양재</item>
    </string-array>

    <string-array name="line4_stations">
        <item>서울역</item>
        <item>혜화</item>
        <item>사당</item>
    </string-array>

    <string-array name="line5_stations">
        <item>여의도</item>
        <item>동대문</item>
    </string-array>

    <string-array name="line6_stations">
        <item>합정역</item>
        <item>연신내</item>
    </string-array>

    <string-array name="line7_stations">
        <item>가산디지털단지</item>
        <item>건대입구</item>
        <item>노원</item>
    </string-array>

    <string-array name="line8_stations">
        <item>천호</item>
        <item>잠실</item>
    </string-array>

    <string-array name="line9_stations">
        <item>노량진</item>
        <item>고속터미널</item>
        <item>당산</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
