<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:orderInCategory="0"
        android:icon="@drawable/ic_bottom_home"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_category"
        android:orderInCategory="1"
        android:icon="@drawable/ic_bottom_category"
        android:title="@string/title_category"/>

    <item
    android:id="@+id/navigation_sell"
    android:orderInCategory="2"
    android:icon="@drawable/ic_bottom_sell"
    android:title="@string/title_sell"/>

    <item
        android:id="@+id/navigation_notifications"
        android:orderInCategory="3"
        android:icon="@drawable/ic_bottom_notification"
        android:title="@string/title_notifications"/>

    <item
        android:id="@+id/navigation_mypage"
        android:orderInCategory="4"
        android:icon="@drawable/ic_bottom_mypage"
        android:title="@string/title_mypage"/>

</menu>